# voxtype

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/voxtype-app/: Cargo.toml
crates/voxtype-app/src/: controller.rs  lib.rs  ports.rs  provider.rs  wake.rs
crates/voxtype-core/: Cargo.toml
crates/voxtype-core/src/: audio.rs  cancellation.rs  error.rs  lib.rs  provider.rs  routing.rs  session.rs
crates/voxtype-provider-common/: Cargo.toml
crates/voxtype-provider-common/src/: lib.rs
crates/voxtype-provider-deepgram/: Cargo.toml
crates/voxtype-provider-deepgram/src/: lib.rs
crates/voxtype-provider-doubao/: Cargo.toml
crates/voxtype-provider-doubao/src/: lib.rs  managed.rs  opus_codec.rs  runner.rs  session.rs  websocket.rs
crates/voxtype-provider-rest/: Cargo.toml
crates/voxtype-provider-rest/src/: lib.rs
docs/: api-contracts.md  architecture.md  configuration.md  deepgram-provider.md  dependencies-and-builds.md  doubao-api-analysis.md  doubao-managed-credentials.md  fcitx5-integration.md  implementation-layers.md  local-kde-ime-audit.md  platform-support.md  requirements.md  roadmap.md
docs/decisions/: 0001-rust.md  0002-system-boundaries-and-workspace.md  0003-application-events-and-runtime-wake.md
fcitx5-addon/: CMakeLists.txt  voxtypebridge.conf  voxtypebridge.cpp
packaging/applications/: io.github.tinnci.VoxType.Grammar.desktop  io.github.tinnci.VoxType.Settings.desktop  io.github.tinnci.VoxType.desktop
packaging/dbus/: io.github.tinnci.VoxType.service.in
packaging/qml/: Cleanup.qml  Overlay.qml  Settings.qml
packaging/systemd/: voxtype-tray.service  voxtyped.service
scripts/: install-fcitx-addon.sh  install-user.sh  uninstall-fcitx-addon.sh  uninstall-user.sh
src/: audio.rs  calibration.rs  client.rs  config.rs  daemon.rs  desktop.rs  fcitx.rs  grammar.rs  insertion.rs  lib.rs  main.rs  provider_adapters.rs  qml.rs  vad.rs
