[package]
name = "voxtype"
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.85"
description = "KDE-first voice typing for Linux"
repository = "https://github.com/Tinnci/voxtype"
publish = false

[workspace]
members = ["crates/voxtype-core"]
resolver = "3"

[dependencies]
voxtype-core = { path = "crates/voxtype-core" }
zbus = { version = "5.13.2", default-features = false, features = ["async-io", "blocking-api"] }

[[bin]]
name = "voxtype"
path = "src/bin/voxtype.rs"

[[bin]]
name = "voxtyped"
path = "src/bin/voxtyped.rs"

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

# Keep local edit-build-test cycles small. Full debug information remains
# available through an opt-in `debug-full` profile.
[profile.dev]
debug = 1
incremental = true

[profile.test]
debug = 1
incremental = true

[profile.debug-full]
inherits = "dev"
debug = 2

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
