[package]
name = "voxtype"
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.85"
description = "KDE-first voice typing for Linux"
repository = "https://github.com/Tinnci/voxtype"
publish = false

[workspace]
members = ["crates/voxtype-core", "crates/voxtype-provider-rest"]
resolver = "3"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "1.1.3", default-features = false, features = ["parse", "serde", "std"] }
voxtype-core = { path = "crates/voxtype-core" }
voxtype-provider-rest = { path = "crates/voxtype-provider-rest" }
zbus = { version = "5.13.2", default-features = false, features = ["async-io", "blocking-api"] }

[[bin]]
name = "voxtype"
path = "src/bin/voxtype.rs"

[[bin]]
name = "voxtyped"
path = "src/bin/voxtyped.rs"

[[bin]]
name = "voxtype-tray"
path = "src/bin/voxtype-tray.rs"

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

# Keep local edit-build-test cycles small. Full debug information remains
# available through an opt-in `debug-full` profile.
[profile.dev]
debug = 1
incremental = true

[profile.test]
debug = 1
incremental = true

[profile.debug-full]
inherits = "dev"
debug = 2

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
