[package]
name = "voxtype"
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.85"
description = "KDE-first voice typing for Linux"
repository = "https://github.com/Tinnci/voxtype"
publish = false

[features]
default = []
# The observed Doubao Android-client protocol is unofficial and intentionally
# excluded from normal distribution builds until its runtime and licensing
# gates are satisfied.
doubao-unofficial = ["dep:voxtype-provider-doubao"]

[workspace]
members = [
    "crates/voxtype-app",
    "crates/voxtype-core",
    "crates/voxtype-provider-common",
    "crates/voxtype-provider-deepgram",
    "crates/voxtype-provider-doubao",
    "crates/voxtype-provider-rest",
]
resolver = "3"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = { version = "1.1.3", default-features = false, features = ["display", "parse", "serde", "std"] }
voxtype-core = { path = "crates/voxtype-core" }
voxtype-app = { path = "crates/voxtype-app" }
voxtype-provider-common = { path = "crates/voxtype-provider-common" }
voxtype-provider-deepgram = { path = "crates/voxtype-provider-deepgram" }
voxtype-provider-doubao = { path = "crates/voxtype-provider-doubao", optional = true }
voxtype-provider-rest = { path = "crates/voxtype-provider-rest" }
zbus = { version = "5.13.2", default-features = false, features = ["async-io", "blocking-api"] }

[dev-dependencies]
zbus = { version = "5.13.2", default-features = false, features = ["async-io", "blocking-api", "p2p"] }

[[bin]]
name = "voxtype"
path = "src/bin/voxtype.rs"

[[bin]]
name = "voxtyped"
path = "src/bin/voxtyped.rs"

[[bin]]
name = "voxtype-tray"
path = "src/bin/voxtype-tray.rs"

[[bin]]
name = "voxtype-overlay"
path = "src/bin/voxtype-overlay.rs"

[[bin]]
name = "voxtype-settings"
path = "src/bin/voxtype-settings.rs"

[[bin]]
name = "voxtype-cleanup"
path = "src/bin/voxtype-cleanup.rs"

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

# Keep local edit-build-test cycles small. Full debug information remains
# available through an opt-in `debug-full` profile.
[profile.dev]
debug = 1
incremental = true

[profile.test]
debug = 1
incremental = true

[profile.debug-full]
inherits = "dev"
debug = 2

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
