[package]
name = "voxtype-provider-common"
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.85"
description = "Audited common helpers for VoxType cloud provider adapters"
repository = "https://github.com/Tinnci/voxtype"
publish = false

[dependencies]
voxtype-core = { path = "../voxtype-core" }
zeroize = { version = "1.8.2", features = ["derive"] }

[lints]
workspace = true
