[package]
name = "voxtype-provider-deepgram"
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.85"
description = "Official Deepgram prerecorded transcription provider for VoxType"
repository = "https://github.com/Tinnci/voxtype"
publish = false

[dependencies]
serde_json = "1.0.145"
voxtype-core = { path = "../voxtype-core" }
voxtype-provider-common = { path = "../voxtype-provider-common" }

[lints]
workspace = true
