[package]
name = "voxtype-provider-doubao"
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
md5 = "0.8.0"
opus = "0.3.1"
serde_json = "1.0.145"
voxtype-core = { path = "../voxtype-core" }
voxtype-provider-common = { path = "../voxtype-provider-common" }

[lints]
workspace = true
