[package]
name = "voxtype-provider-doubao"
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
md5 = "0.8.0"
opus = "0.3.1"
serde_json = "1.0.145"
tungstenite = { version = "0.29.0", default-features = false, features = ["handshake", "rustls-tls-native-roots"] }
voxtype-core = { path = "../voxtype-core" }
voxtype-provider-common = { path = "../voxtype-provider-common" }
zeroize = "1.8.2"

[lints]
workspace = true
